--- a/index.html
+++ b/index.html
@@ -235,15 +235,17 @@
     <footer class="footer">
       <p class="footer__title">The_SamuelJoshua&trade;</p>
       <div class="footer__social">
-        <a href="#" class="footer__icon"
-          ><i class="bx bxl-facebook-circle"></i
+        <a href="https://pin.it/34S5B8X3i" class="footer__icon"
+          ><i class="bx bxl-pinterest"></i
         ></a>
         <a
           href="https://www.instagram.com/the_samueljoshua"
           class="footer__icon"
           ><i class="bx bxl-instagram"></i
         ></a>
-        <a href="#" class="footer__icon"><i class="bx bxl-twitter"></i></a>
+        <a href="https://x.com/d_SamuelJshua" class="footer__icon"
+          ><i class="bx bxl-twitter"></i
+        ></a>
       </div>
       <p>&#169; 2025 Copyright - All rights reserved</p>
     </footer>
