--- a/index.html
+++ b/index.html
@@ -198,23 +198,28 @@
       <section class="contact section" id="contact">
         <h2 class="section-title">Contact</h2>
         <div class="contact__container bd-grid">
-          <form action="" class="contact__form">
+          <form
+            action="https://formspree.io/f/xannlpgr"
+            method="POST"
+            class="contact__form"
+          >
+            >
             <input
               type="text"
-              name=""
+              name="name"
               id=""
               placeholder="Full Name"
               class="contact__input"
             />
             <input
               type="email"
-              name=""
+              name="email"
               id=""
               placeholder="Email Address"
               class="contact__input"
             />
             <textarea
-              name=""
+              name="message"
               id=""
               cols="0"
               rows="10"
@@ -222,11 +227,14 @@
               placeholder="What do you need?"
             ></textarea>
             <input
-              type="button"
+              type="submit"
               value="Submit"
               class="contact__button button"
             />
           </form>
+          <p id="formResponse" style="display: none; color: green">
+            Message sent successfully!
+          </p>
         </div>
       </section>
     </main>
