--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
               <div><span class="skills__percentage">45%</span></div>
               <div class="skills__bar skills__react"></div>
             </div>
+
             <div class="skills__data">
               <div class="skills__names">
                 <i class="bx bxl-tailwind-css skills__icon tailwind"></i>
@@ -153,17 +154,29 @@
               <div><span class="skills__percentage">15%</span></div>
               <div class="skills__bar skills__tailwind"></div>
             </div>
-          </div>
-          <!-- <div class="skills__data">
-            <div class="skills__names">
-              <i class='bx bxl-figma skills__icons figma' ></i>
 
-              <span class="skills__name">Figma</span>
+            <div class="skills__data">
+              <div class="skills__names">
+                <i class='bx bxl-figma skills__icon figma' ></i>
+  
+                <span class="skills__name">Figma</span>
+              </div>
+              <div><span class="skills__percentage">60%</span></div>
+              <div class="skills__bar skills__figma"></div>
             </div>
-            <div><span class="skills__percentage">50%</span></div>
-            <div class="skills__bar skills__figma"></div>
+
+            <div class="skills__data">
+              <div class="skills__names">
+                <i class='bx bxl-git skills__icon git'></i>
+                <span class="skills__name">Git</span>
+              </div>
+              <div><span class="skills__percentage">80%</span></div>
+              <div class="skills__bar skills__git"></div>
+            </div>
           </div>
-        </div> -->
+
+          
+        </div>
 
           <!-- <div><img src="images/figma.png" alt="" class="skills__img" /></div> -->
         </div>
@@ -202,7 +215,7 @@
             action="https://formspree.io/f/xannlpgr"
             method="POST"
             class="contact__form"
-          >
+          
             >
             <input
               type="text"
