--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!--ABOUT SECTION-->
       <section class="about section" id="about">
         <h2 class="section-title">About</h2>
-        <div class="about-container bd-grid">
+        <div class="about__container bd-grid">
           <div class="about__img"><img src="images/about.jpg" alt="" /></div>
           <div>
             <h2 class="about__subtitle">I'm Samuel</h2>
@@ -257,15 +257,15 @@
       <p class="footer__title">The_SamuelJoshua&trade;</p>
       <div class="footer__social">
         <a href="https://pin.it/34S5B8X3i" class="footer__icon"
-          ><i class="bx bxl-pinterest"></i
+          ><i class="bx bxl-pinterest foot footer__icons"></i
         ></a>
         <a
           href="https://www.instagram.com/the_samueljoshua"
           class="footer__icon"
-          ><i class="bx bxl-instagram"></i
+          ><i class="bx bxl-instagram footer__icons"></i
         ></a>
         <a href="https://x.com/d_SamuelJshua" class="footer__icon"
-          ><i class="bx bxl-twitter"></i
+          ><i class="bx bxl-twitter footer__icons"></i
         ></a>
       </div>
       <p>&#169; 2025 Copyright - All rights reserved</p>
