--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +10,9 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <!--REMIX ICON CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
+
     <title>Samuel Joshua</title>
   </head>
   <body>
@@ -157,7 +161,17 @@
 
             <div class="skills__data">
               <div class="skills__names">
-                <i class='bx bxl-figma skills__icon figma' ></i>
+                <i class="ri-nextjs-fill skills__icon nextjs"></i>
+
+                <span class="skills__name">NextJS</span>
+              </div>
+              <div><span class="skills__percentage">10%</span></div>
+              <div class="skills__bar skills__nextjs"></div>
+            </div>
+
+            <div class="skills__data">
+              <div class="skills__names">
+                <i class="ri-figma-line skills__icon figma"></i>
   
                 <span class="skills__name">Figma</span>
               </div>
@@ -167,11 +181,38 @@
 
             <div class="skills__data">
               <div class="skills__names">
+                <i class='bx bxl-typescript skills__icon typescript'></i>
+                <span class="skills__name">TypeScript</span>
+              </div>
+              <div><span class="skills__percentage">10%</span></div>
+              <div class="skills__bar skills__typescript"></div>
+            </div>
+
+            <div class="skills__data">
+              <div class="skills__names">
                 <i class='bx bxl-git skills__icon git'></i>
                 <span class="skills__name">Git</span>
               </div>
               <div><span class="skills__percentage">80%</span></div>
               <div class="skills__bar skills__git"></div>
+            </div>
+
+            <div class="skills__data">
+              <div class="skills__names">
+                <i class="ri-supabase-fill skills__icon supa"></i>
+                <span class="skills__name">Supabase</span>
+              </div>
+              <div><span class="skills__percentage">5%</span></div>
+              <div class="skills__bar skills__supa"></div>
+            </div>
+            
+            <div class="skills__data">
+              <div class="skills__names">
+                <i class="ri-npmjs-line skills__icon npm"></i>
+                <span class="skills__name">NPM</span>
+              </div>
+              <div><span class="skills__percentage">85%</span></div>
+              <div class="skills__bar skills__npm"></div>
             </div>
           </div>
 
