--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
           <div>
             <h2 class="skills__subtitle">Professional Skills</h2>
             <p class="skills__text">
-              I specialize in crafting responsive and visually appealing
-              websites tailored to user needs. With a focus on modern tools and
-              techniques, here are the core skills I bring to every project
+              I rate my proficiency honestly, knowing there's always room for growth. Specializing in crafting responsive and visually appealing
+              websites tailored to user needs with a focus on modern tools and
+              techniques, here are my core development skills I bring to every project
             </p>
             <div class="skills__data">
               <div class="skills__names">
@@ -135,7 +135,7 @@
                 <i class="bx bxl-javascript skills__icon js"></i>
                 <span class="skills__name">JavaScript</span>
               </div>
-              <div><span class="skills__percentage">78%</span></div>
+              <div><span class="skills__percentage">80%</span></div>
               <div class="skills__bar skills__js"></div>
             </div>
 
@@ -145,7 +145,7 @@
 
                 <span class="skills__name">React</span>
               </div>
-              <div><span class="skills__percentage">45%</span></div>
+              <div><span class="skills__percentage">75%</span></div>
               <div class="skills__bar skills__react"></div>
             </div>
 
@@ -155,7 +155,7 @@
 
                 <span class="skills__name">Tailwind CSS</span>
               </div>
-              <div><span class="skills__percentage">15%</span></div>
+              <div><span class="skills__percentage">0.5% (pending)</span></div>
               <div class="skills__bar skills__tailwind"></div>
             </div>
 
@@ -165,7 +165,7 @@
 
                 <span class="skills__name">Next JS</span>
               </div>
-              <div><span class="skills__percentage">10%</span></div>
+              <div><span class="skills__percentage">0.5% (pending)</span></div>
               <div class="skills__bar skills__nextjs"></div>
             </div>
 
@@ -175,7 +175,7 @@
   
                 <span class="skills__name">Figma</span>
               </div>
-              <div><span class="skills__percentage">60%</span></div>
+              <div><span class="skills__percentage">70%</span></div>
               <div class="skills__bar skills__figma"></div>
             </div>
 
@@ -184,7 +184,7 @@
                 <i class='bx bxl-typescript skills__icon typescript'></i>
                 <span class="skills__name">TypeScript</span>
               </div>
-              <div><span class="skills__percentage">10%</span></div>
+              <div><span class="skills__percentage">0.5% (pending)</span></div>
               <div class="skills__bar skills__typescript"></div>
             </div>
 
@@ -193,7 +193,7 @@
                 <i class='bx bxl-git skills__icon git'></i>
                 <span class="skills__name">Git</span>
               </div>
-              <div><span class="skills__percentage">80%</span></div>
+              <div><span class="skills__percentage">70%</span></div>
               <div class="skills__bar skills__git"></div>
             </div>
 
@@ -202,7 +202,7 @@
                 <i class="ri-supabase-fill skills__icon supa"></i>
                 <span class="skills__name">Supabase</span>
               </div>
-              <div><span class="skills__percentage">5%</span></div>
+              <div><span class="skills__percentage">0.5% (pending)</span></div>
               <div class="skills__bar skills__supa"></div>
             </div>
             
@@ -211,7 +211,7 @@
                 <i class="ri-npmjs-line skills__icon npm"></i>
                 <span class="skills__name">NPM</span>
               </div>
-              <div><span class="skills__percentage">85%</span></div>
+              <div><span class="skills__percentage">75%</span></div>
               <div class="skills__bar skills__npm"></div>
             </div>
           </div>
