--- a/index.html
+++ b/index.html
@@ -214,6 +214,15 @@
               <div><span class="skills__percentage">75%</span></div>
               <div class="skills__bar skills__npm"></div>
             </div>
+
+            <div class="skills__data">
+              <div class="skills__names">
+                <i  class="ri-vercel-fill skills__icon vercel"></i>
+                <span class="skills__name">Vercel</span>
+              </div>
+              <div><span class="skills__percentage">50%</span></div>
+              <div class="skills__bar skills__vercel"></div>
+            </div>
           </div>
 
           
