--- a/index.html
+++ b/index.html
@@ -220,8 +220,17 @@
                 <i  class="ri-vercel-fill skills__icon vercel"></i>
                 <span class="skills__name">Vercel</span>
               </div>
-              <div><span class="skills__percentage">50%</span></div>
+              <div><span class="skills__percentage">60%</span></div>
               <div class="skills__bar skills__vercel"></div>
+            </div>
+
+            <div class="skills__data">
+              <div class="skills__names">
+                <i class='bx bxl-visual-studio skills__icon vs-code'></i>
+                <span class="skills__name">Visual Studio Code</span>
+              </div>
+              <div><span class="skills__percentage">80%</span></div>
+              <div class="skills__bar skills__vs-code"></div>
             </div>
           </div>
 
