--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
             <div class="skills__data">
               <div class="skills__names">
-                <i class="bx bxl-react skills__icon"></i>
+                <i class="bx bxl-react skills__icon react"></i>
 
                 <span class="skills__name">React</span>
               </div>
@@ -293,7 +293,7 @@
             <textarea
               name="message"
               id=""
-              cols="0"
+              cols="30"
               rows="10"
               class="contact__input"
               placeholder="What do you need?"
