--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
                 <span class="skills__name">Tailwind CSS</span>
               </div>
-              <div><span class="skills__percentage">0.5% (pending)</span></div>
+              <div><span class="skills__percentage">10%</span></div>
               <div class="skills__bar skills__tailwind"></div>
             </div>
 
