--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             class="home__social-icon"
             ><i class="bx bxl-linkedin"></i
           ></a>
-          <a href="https://wa.link/kd18k3" class="home__social-icon"
+          <a href="https://wa.link/x3az16" class="home__social-icon"
             ><i class="bx bxl-whatsapp"></i
           ></a>
           <a
